manga_db/webGUI/static/style.css
a, h1, h2       { color: #fff; underline: none }
a               { text-decoration: none; }
a:hover, a:visited, a:focus {
    text-decoration: none;
    color: #fff;
}
h1, h2          { font-family: 'Open Sans',sans-serif; margin: 0; }
h1              { border-bottom: 2px solid #eee; margin-bottom: 1em;}
h2              { font-size: 1.2em; }
h3              { color: #22a7f0; }
.search-tags input{ margin-bottom: 0 }

.page           { margin: 2em auto; width: 75%;
                  padding: 0.8em}
.search-tags input {

}
#page-next {
    position: fixed;
    top: 0%;
    right: 0;
    height: 100%;
}
#page-next:hover {
    color: #cc0000;
    background-color: #7575750f;
}
#page-next-inner {
	position: relative;
	top: 50%;
    padding-left: 0.3em;
    padding-right: 0.3em;
    font-size: 4em;
    font-weight: bold;
}
#page-prev {
    position: fixed;
    top: 0%;
    left: 0;
    height: 100%;
}
#page-prev:hover {
    color: #cc0000;
    background-color: #7575750f;
}
#page-prev-inner {
	position: relative;
	top: 50%;
    padding-left: 0.3em;
    padding-right: 0.3em;
    font-size: 4em;
    font-weight: bold;
}
.button-leftmost {
    margin: 5px 5px 5px 0;
}
.blue-color {
	background-color: #22a7f0!important;
}
.list-tag {
	position: relative;
	padding-right: 17px!important;
}
.list-tag-border {
	border: #22a7f0 1px solid;
}
.list-tag a {
	text-decoration: none!important;
	color: #fff!important;
}
input[type="checkbox"].mdb-checkboxes {
	/* input[type=checkbox], input[type=radio] { */
	vertical-align: middle;
	position: relative;
	bottom: 1px;
	margin: 0 3px 0 0;
}
ul.flash-messages li label {
	font-weight: normal;
	margin-bottom: 0px;
}
.mdb-list-remove {
    display: inline-block;
    position: absolute;
    top: 0;
    bottom: 0;
    vertical-align: middle;
    right: 0;
    text-align: center;
    padding: 3px;
    padding-top: 4px;
    font-size: 0.8em;
    border-left: 1px solid #22a7f0;
}
/* Dropdown Button */
.mdb-drop-btn {
    	cursor: pointer;
}

/* Dropdown button on hover & focus */
.mdb-drop-btn:hover, .mdb-drop-btn:focus {
    background-color: #4c4c4c;
}

/* The container <div> - needed to position the dropdown content */
.mdb-dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.mdb-dropdown-content {
    display: none;
    position: absolute;
    background-color: #333;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    /* limit height and add scrollbar with overflow auto */
    overflow: auto;
    max-height: 250px;
}

/* Links inside the dropdown */
.mdb-dropdown-content a {
    color: #fff;
    padding: 3px 12px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.mdb-dropdown-content a:hover {background-color: #4c4c4c}
/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.mdb-show {display:block;}

#ext-info {
    float: left;
    width: 100%;
}
.ext-info-title {
    font-size: 20px;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
.ext-info-line {
    display: table-row;
}
.ext-info {
    display: table-cell;
    padding-right: 13px;
}
.ext-info-data {
    display: table-cell;
}
.edit-book-info {
	vertical-align: middle;
	display: table-cell;
}
.choose-book-info-container {
	font-family: 'Open Sans',sans-serif;
        color: #fff;
        display: table;
        border-collapse: separate;
}
ul.flash-messages {
   list-style: none;
   margin-left: 0;
   padding-left: 1em;
}
li.info {
    font-size: 1em;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
}
li.title {
    font-size: 18px;
    font-family: 'Open Sans',sans-serif;
    color: #fff;
    margin-bottom: 0.5em 0;
}
li.warning {
	font-size: 20px;
	color: #f67764; /* #f67764 */
}

.pink-color{background-color: #a233a5 !important} /* #a72aaa */
.star-inactive {
    color: #fff !important;
}
.star-active {
    color: #22a7f0 !important;
}
#MyRating i:hover {
    color: #c00 !important;
}

#simple-container-sorting {
    display: inline-table;
}
@media only screen and (max-width: 995px) {
    #simple-container-sorting {
        float: left;
        text-align: left;
    }
}
.search-options {
    display: inline-table;
    line-height: 32px;
}
    
#srchIcon { /* set to inline-block and same (line)height as input field to align icon and input */
    display: inline-block !important; min-width: 15px;
    min-height: 15px; line-height: 32px; }
#searchBtn { color: #1a1a1a; display: table-cell; /*margin-left: 10px;*/ margin-left: 5px;
    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
}
#txtSearch { width: 100%; }
#mangaDBLists {
    width: 100%;
    position: relative;
    list-style-type: none;
    margin: 10px 0 0 0;
    padding: 0;
    /* start new col when height is reached
    display: flex;
    flex-direction: column;
    flex-wrap: wrap; works but full ul gets filled -> gap too big between cols */
    /* The example below shows how to specify that when an element overflows from its container vertically, it should start a new column 150px over. */
    column-fill: auto;
    -webkit-column-fill: auto;
    -moz-column-fill: auto;
    column-width: 120px;
    -webkit-column-width: 120px;
    -moz-column-width: 120px;
    column-gap: 80px;
    max-height: 200px;
}
#updateBtn {
    margin: 0;
}
.lists-label {
    cursor: pointer;
    position: relative;
}
.button-icon {
    display: inline;
    margin: 0;
}
#add-ext-info-btn {
    color: #1a1a1a; display: table-cell; /*margin-left: 10px;*/ margin-left: 5px;
    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
}
#add-book-btn {
    float: right;
    padding: 5px;
    margin: 3px;
}
#jump-book-btn {
    background-color: #c00;
    min-width: 75px;
    float: right;
    /* top right bot left */
    margin: 0 0 0 0;
    padding: 9px;
    /*text-align: right;*/
    line-height: 13px;
}
/* ... */

